--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,58 @@
+/* General Styles */
+
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    color: #f0f0f0; /* Whitish text color */
-    background: linear-gradient(to right, #2c3e50, #bdc3c7); /* Gradient background with shades of grey */
+    color: #f0f0f0;
+    background: linear-gradient(to right, #2c3e50, #bdc3c7);
+}
+html {
+    scroll-behavior: smooth;
 }
 
+/* Header and Navigation */
 header {
     background-color: #2c3e50;
-    padding: 10px 0;
+    padding: 15px 0;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
-
+.h-nav-resp{
+    transition: all 0.7s;
+}
 nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin: 0 20px;
 }
 
 nav ul li a {
-    color: white;
+    color: #ecf0f1;
     text-decoration: none;
     font-weight: bold;
+    transition: color 0.3s ease;
 }
 
+nav ul li a:hover {
+    color: #bdc3c7;
+}
+
+/* Section Styling */
 .section {
     position: relative;
     padding: 60px 0;
     border-radius: 10px;
     margin: 20px 0;
+    overflow: hidden;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.6); /* Fallback color */
 }
 
 .section::before {
@@ -43,7 +62,7 @@ nav ul li a {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(44, 62, 80, 0.8); /* Semi-transparent overlay */
+    background: rgba(44, 62, 80, 0.8);
     border-radius: 10px;
     z-index: 1;
 }
@@ -52,52 +71,70 @@ nav ul li a {
     position: relative;
     z-index: 2;
     width: 80%;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
+/* Typography */
 h1, h2 {
     text-align: center;
-    color: #ecf0f1; /* Whitish text color */
+    color: #ecf0f1;
+    margin: 0;
+    padding-bottom: 10px;
+    text-transform: uppercase;
 }
 
 p, ul {
-    line-height: 1.6;
-    color: #ecf0f1; /* Whitish text color */
+    line-height: 1.8;
+    color: #ecf0f1;
 }
 
-ul {
-    padding-left: 20px;
-}
-
+/* Links */
 a {
-    color: #ecf0f1; /* Whitish text color */
+    color: #ecf0f1;
     text-decoration: none;
+    transition: color 0.3s ease;
 }
 
 a:hover {
+    color: #bdc3c7;
     text-decoration: underline;
 }
 
+/* Footer */
 footer {
     background-color: #2c3e50;
-    color: white;
+    color: #ecf0f1;
     text-align: center;
     padding: 20px 0;
-    position: fixed;
     width: 100%;
     bottom: 0;
+    font-size: 0.9em;
+    box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.2);
 }
 
+/* Profile Photo */
 .profile-photo-large {
     display: block;
     margin: 20px auto;
     width: 150px;
     height: 150px;
     border-radius: 50%;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
+/* Experience Section */
 .experience-item {
     margin-bottom: 40px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgba(44, 62, 80, 0.8);
+    transition: transform 0.5s ease;
+}
+
+.experience-item:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
 }
 
 .experience-header {
@@ -107,15 +144,12 @@ footer {
     margin-bottom: 10px;
 }
 
-.experience-left {
-    display: flex;
-    align-items: center;
-}
-
 .experience-header img {
     width: 50px;
     height: auto;
-    margin-right: 10px;
+    margin-right: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .experience-details {
@@ -125,47 +159,190 @@ footer {
 
 .experience-details h3, .experience-details h4 {
     margin: 0;
-    color: #ecf0f1; /* Whitish text color */
+    color: #ecf0f1;
 }
 
-.experience-right p {
-    margin: 0;
-    color: #ecf0f1; /* Whitish text color */
-}
-
-.experience-item p {
-    margin-bottom: 10px;
-    color: #ecf0f1; /* Whitish text color */
-}
-
-.experience-item ul {
-    list-style-type: disc;
-    padding-left: 20px;
-    color: #ecf0f1; /* Whitish text color */
-}
-
-/* Background images for sections */
-.home-section {
-    background: url('images/skydiving.png') no-repeat center center;
+/* Section Background Images */
+.home-section, .experience-section, .projects-section, .skills-section, .contact-section {
     background-size: cover;
+    background-position: center;
+}
+
+.home-section {
+    background-image: url('images/skydiving.png');
 }
 
 .experience-section {
-    background: url('images/rockclimbing.png') no-repeat center center;
-    background-size: cover;
+    background-image: url('images/rockclimbing.png');
 }
 
 .projects-section {
-    background: url('images/kayaking.png') no-repeat center center;
-    background-size: cover;
+    background-image: url('images/kayaking.png');
 }
 
 .skills-section {
-    background: url('images/juanita-4.png') no-repeat center center;
-    background-size: cover;
+    background-image: url('images/juanita-4.png');
 }
 
 .contact-section {
-    background: url('images/juanita-2.png') no-repeat center center;
-    background-size: cover;
+    background-image: url('images/juanita-2.png');
+}
+
+/* Blog Section */
+/* Blog Section Styles */
+.blog-section {
+    padding: 50px 0;
+    background-color: #f9f9f9;
+    color: #333;
+}
+
+.blog-section h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.blog-search-bar {
+    display: block;
+    width: 98%;
+    padding: 10px;
+    font-size: 1rem;
+    margin-bottom: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    transition: border-color 0.3s ease;
+}
+
+.blog-search-bar:focus {
+    border-color: #0073e6;
+    outline: none;
+}
+
+.blog-section .blog-post {
+    background-color: #fff;
+    border: 1px solid #e1e1e1;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding: 20px;
+    transition: box-shadow 0.3s ease;
+    display: block;
+}
+
+.blog-section .blog-post h3 {
+    font-size: 1.75rem;
+    margin-bottom: 10px;
+}
+
+.blog-section .blog-post a {
+    color: #0073e6;
+    text-decoration: none;
+}
+
+.blog-section .blog-post:hover {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.blog-section .blog-post p {
+    font-size: 1.125rem;
+    margin-bottom: 15px;
+    color: black;
+}
+
+.blog-section .blog-post a:hover {
+    text-decoration: underline;
+}
+
+#burger {
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 15px;
+    display: none;
+}
+
+.line {
+    width: 33px;
+    background-color: white;
+    height: 4px;
+    margin: 5px 3px;
+}
+
+
+
+/* Media Queries for Responsiveness */
+@media (max-width: 1200px) {
+    .container {
+        width: 90%;
+    }
+    
+
+    nav ul li {
+        margin: 0 15px;
+    }
+}
+
+@media (max-width: 768px) {
+    #burger{
+        display: block;
+    }
+    header {
+        padding: 10px 0;
+    }
+    .h-nav-resp{
+        transition: all 0.7s;
+        height: 70px;
+        opacity: 0;
+    }
+    nav ul {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    nav ul li {
+        margin: 10px 0;
+    }
+
+    .section {
+        padding: 40px 0;
+    }
+
+    .profile-photo-large {
+        width: 120px;
+        height: 120px;
+    }
+
+    .experience-item {
+        margin-bottom: 30px;
+        padding: 15px;
+    }
+}
+
+@media (max-width: 480px) {
+    body {
+        font-size: 14px;
+    }
+
+    h1, h2 {
+        font-size: 1.5em;
+    }
+
+    .section {
+        padding: 20px 0;
+    }
+
+    .profile-photo-large {
+        width: 100px;
+        height: 100px;
+    }
+
+    .experience-item {
+        margin-bottom: 20px;
+        padding: 10px;
+    }
+
+    footer {
+        font-size: 0.8em;
+    }
 }
