--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
     padding: 0;
     color: #f0f0f0;
     background: linear-gradient(to right, #2c3e50, #bdc3c7);
+    padding-top: 60px; /* Adjust based on header height */
 }
 html {
     scroll-behavior: smooth;
@@ -16,6 +17,10 @@ header {
     background-color: #2c3e50;
     padding: 15px 0;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
 .h-nav-resp{
     transition: all 0.7s;
