--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,21 @@
-/* General Styles */
+/* Fade-in animation */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.home-section .container {
+    animation: fadeIn 1.5s ease-in-out;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -6,8 +23,8 @@ body {
     padding: 0;
     color: #f0f0f0;
     background: linear-gradient(to right, #2c3e50, #bdc3c7);
-    padding-top: 60px; /* Adjust based on header height */
 }
+
 html {
     scroll-behavior: smooth;
 }
@@ -17,13 +34,14 @@ header {
     background-color: #2c3e50;
     padding: 15px 0;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.header {
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 1000;
-}
-.h-nav-resp{
-    transition: all 0.7s;
+    /* background-color: #fff; Adjust for better readability */
 }
 nav ul {
     list-style: none;
@@ -62,7 +80,8 @@ nav ul li a:hover {
     margin: 20px 0;
     overflow: hidden;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
-    background-color: rgba(0, 0, 0, 0.6); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.6);
+    /* Fallback color */
 }
 
 .section::before {
@@ -86,7 +105,8 @@ nav ul li a:hover {
 }
 
 /* Typography */
-h1, h2 {
+h1,
+h2 {
     text-align: center;
     color: #ecf0f1;
     margin: 0;
@@ -94,7 +114,8 @@ h1, h2 {
     /* text-transform: uppercase; */
 }
 
-p, ul {
+p,
+ul {
     line-height: 1.8;
     color: #ecf0f1;
 }
@@ -167,13 +188,18 @@ footer {
     flex-direction: column;
 }
 
-.experience-details h3, .experience-details h4 {
+.experience-details h3,
+.experience-details h4 {
     margin: 0;
     color: #ecf0f1;
 }
 
 /* Section Background Images */
-.home-section, .experience-section, .projects-section, .skills-section, .contact-section {
+.home-section,
+.experience-section,
+.projects-section,
+.skills-section,
+.contact-section {
     background-size: cover;
     background-position: center;
 }
@@ -263,6 +289,15 @@ footer {
     text-decoration: underline;
 }
 
+/* styles.css */
+.blog-post img.blog-post-image {
+    max-width: 100%;  
+    width: 300px;        
+    height: auto;         
+    margin-bottom: 20px;  
+}
+
+
 #burger {
     position: absolute;
     cursor: pointer;
@@ -285,7 +320,7 @@ footer {
     .container {
         width: 90%;
     }
-    
+
 
     nav ul li {
         margin: 0 15px;
@@ -293,17 +328,19 @@ footer {
 }
 
 @media (max-width: 768px) {
-    #burger{
+    #burger {
         display: block;
     }
+
     header {
         padding: 10px 0;
     }
-    .h-nav-resp{
-        transition: all 0.7s;
+
+    .h-nav-resp {
         height: 40px;
         opacity: 0;
     }
+
     nav ul {
         flex-direction: column;
         margin-left: 10px;
@@ -333,7 +370,8 @@ footer {
         font-size: 14px;
     }
 
-    h1, h2 {
+    h1,
+    h2 {
         font-size: 1.5em;
     }
 
