--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,9 @@ body {
     padding: 0;
     color: #f0f0f0;
     background: linear-gradient(to right, #2c3e50, #bdc3c7);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 html {
@@ -142,6 +145,12 @@ footer {
     bottom: 0;
     font-size: 0.9em;
     box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.2);
+}
+.footer {
+    margin-top: auto;
+    background-color: #2c3e50; /* Optional: Add background color */
+    padding: 1rem 0; /* Optional: Add padding */
+    text-align: center; /* Optional: Center align text */
 }
 
 /* Profile Photo */
@@ -313,7 +322,9 @@ footer {
     margin: 5px 3px;
 }
 
-
+main {
+    flex: 1;
+}
 
 /* Media Queries for Responsiveness */
 @media (max-width: 1200px) {
@@ -392,4 +403,10 @@ footer {
     footer {
         font-size: 0.8em;
     }
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
